--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="root"></div>
     <script>
       //window.location.href = '/react/index.html';
-      window.location.href = '/markdown5.html?file=docs/index.md';
+      window.location.href = 'markdown5.html?file=docs/index.md';
     </script>
   </body>
 </html>
